# ghostdeps

./: .eslintrc.json  .gitignore  LICENSE  README.md  action.yml  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
data/: known-hallucinations.json
src/: annotator.ts  diff.ts  index.ts  reporter.ts  scorer.ts  types.ts
src/__tests__/: diff.test.ts  index-event.test.ts  scorer.test.ts
src/checkers/: crossEcosystem.ts  downloadVelocity.ts  knownBadList.ts  registryAge.ts  typosquat.ts
src/checkers/__tests__/: knownBadList.test.ts  typosquat.test.ts
src/parsers/: dotnet.ts  go.ts  index.ts  npm.ts  php.ts  python.ts  ruby.ts  rust.ts
src/parsers/__tests__/: npm.test.ts  python.test.ts
test/: simulate-pr.ts
test/fixtures/dotnet-real/: project.csproj
test/fixtures/edge-cases/: malformed-package.json  requirements-edge.txt
test/fixtures/go-clean/: go.mod
test/fixtures/go-real/: go.mod
test/fixtures/go-suspicious/: go.mod
test/fixtures/js-clean/: package.json
test/fixtures/js-suspicious/: package.json
test/fixtures/multi-ecosystem/: package.json  requirements.txt
test/fixtures/npm-real/: package.json
test/fixtures/php-real/: composer.json
test/fixtures/python-clean/: requirements.txt
test/fixtures/python-real/: requirements.txt
test/fixtures/python-suspicious/: requirements.txt
test/fixtures/ruby-real/: Gemfile
test/fixtures/rust-clean/: Cargo.toml
test/fixtures/rust-real/: Cargo.toml
test/fixtures/rust-suspicious/: Cargo.toml
test/integration/: all-parsers.test.ts  platform-compatibility.test.ts
