[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
mylib = { git = "https://github.com/org/mylib" }
local = { path = "../local" }
fake-crate-xyz = "0.0.1"

[dev-dependencies]
pretty_assertions = "1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }
